fix_accordion: left-align FAQ title and subtitle on mobile

--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -5,8 +5,10 @@
   margin: 0 auto;
 }
 
-.accordion-container > .default-content-wrapper {
-  text-align: center;
+@media (width >= 600px) {
+  .accordion-container > .default-content-wrapper {
+    text-align: center;
+  }
 }
 
 
